css/style.css
/*
 * screen styles for WeatherDrive
 * version 1.0
 */

/* Directory
	1. ==Global
	2. ==Navigation
	3. ==Directions Info Pane
		a. ??Search Group
		b. ??Results Group
			i. &&Summaries
			ii. &&Steps
	4. ==Map
		a. ??Main Map
		b. ??Map Buttons
		c. ??Weather Box
	5. ==Media
*/

/* ==Global== */
html {
	height: 100%;
}

body {
	height: 100%;
	padding-top: 40px;
}

#actionPanel {
	position: relative;
	height: 100%;
	width: 100%;
}

#actionRow {
	height: 100%;
	width: 100%;
	margin: 0;
	padding: 0 0 0 5%;
}

table {
	display: block;
	height: 100%;
	overflow: auto;
	width: 100%;
	margin-bottom: 0;
	border-collapse: collapse;
	padding: 1%;
	background: rgb(255,255,255);
	background: rgba(255,255,255,0.7);
}


.wi {
	color: #F99E28;
}

/* ==Navigation== */
nav, .navbar {
	min-width: 320px;
	margin-bottom: 0;
	background-color: #09132e;
	border-bottom: 2px solid #F99E28;
	padding-top: 2px;
}

.pull-left {
	margin: 8px 0 0 10px;
}

.pull-right {
	margin: 17px 10px 0 0;
}



/* ==Directions Info Pane== */ 
#infoPane {
	height: 100%;
	padding: 0 5% 7% 0;
	margin-top: 7%;
}

.info {
	border: 1px solid white;
}

#mapButton {
    position: relative;
	top: -50px;
	visibility: hidden;
}

.tabTop {
	width: 30%;
	padding: 3px;
	margin-top: 7%;
	margin-bottom: -7%;
	border: 1px solid white !important;
	border-radius: 0 !important;
}

#detailButton {
	position: relative;
	top: -50px;
	visibility: hidden;
}

.tabBottom {
	width: 30%;
	padding: 3px;
	margin-bottom: -7%;
	border: 1px solid white !important;
	border-radius: 0 !important;
}

	/* ??Search Group?? */
	#searchHeader, #searchHeader>tr, #searchHeader>tr>td{
		display: block;
	}

	#mapSearch {
		display: table;
	}

	#mapSearch input {
		border: none;
		border-radius: 0;
	}
	
	.modal-header img {
		vertical-align: text-bottom;
	}
	
	.modal-header {
		color: #09132e;
		border-bottom: 2px solid #F99E28;
	}
	
	
	
	#mapSearch tr {
		display: table-row;
	}

	#mapSearch td {
		display: table-cell;
	}

	.carIcon {
		text-align: center;
		background-color: white;
		width: 0;
		padding: .5em;
	}

	.origin {
		border-bottom: 2px solid gray;
	}

	#switch {
		text-align: center;
		background-color: white;
		cursor: pointer;
	}

	#dateTime {
		margin-bottom: 15px;
	}

	#search, #emailAddressButton {
		width: 100%;
	}

	/* ??Results Group?? */
	
		/* &&Summaries&& */
		.printWeather {
			display: none !important;
		}

		#routeOptions td {
			text-align: left;
			cursor: pointer;
		}

		#firstOption, #secondOption, #thirdOption {
			cursor: pointer;
		}

		.selectedRoute {
			background-color: #FFFFFF;
		}

		#controlRow td div {
			margin-top: 2%;
			border-top: 1px solid #C0C0C0;
			border-right: 1px solid #C0C0C0;
			border-left: 1px solid #C0C0C0;
		}

		#controlRow table {
			background-color: #EEE;
		}

		.hideControls {
			display: none !important;
		}

		#controlRow tr {
			width: 100%;
		}

		#print:hover, #email:hover {
			cursor: pointer;
		}

		#print, #email {
			text-align: right;
		}

		#print {
			padding-right: 5px;
		}

		#email {
			padding-left: 0;
		}

		#expectedConditions, #alerts {
			margin-top: 2%;
		}

		.outlook {
			display: table;
			text-align: center;
		}

		.outlook i {
			font-size: 2em;
		}

		.outlook td {
			padding: .5em .5em 0 .5em;
		}

		.outlook .summary {
			font-weight: bold;
			font-style: italic;
			font-size: .5em;
		}

		.outlook td {
			display: table-cell;
		}

		.outlook tbody {
			overflow: scroll;
		}

		/* &&Steps&& */
		.directionsResult {
			text-align: left;
		}

		#directionsTbody, #directionsTr, #directionsTD {
			display: block;
			width: 100%;
		}

		#adp-placemark {
			margin-top: 0px;
			border-top: none;
		}
		
		.adp-summary {
			font-weight: bold;
		}

		.toggleSteps {
			color: #0000EE;
			font-weight: bold;
			cursor: pointer;
			background-color: #EEE;
			margin-bottom: 1%;
			text-align: center;
			border: 1px solid #C0C0C0;
		}
		
		.toggleSteps:hover {
			background-color: #E6E6E6;
			border-color: #ADADAD;
		}

		.adp-directions {
			display: table;
		}

		.adp-list table {
			display: table;
		}

		.adp-list tbody {
			width: 100%;
		}
		
		.weatherRow:hover {
			background-color: #E6E6E6;
		}

/* ==Map== */

	/* ??Main Map?? */
	#mapColumn {
		height: 100%;
		padding: 0 5% 7% 0;
		margin-top: 7%
	}

	.map-container{
    	position: relative;
    	height: 100%;
    	border: 1px solid white;
	}

	.map-container .map-canvas{
    	position: absolute;
    	height: 100%;
    	top: 0;
    	right: 0;
    	bottom: 0;
    	left: 0;
    	margin: 0;
    	padding: 0;
	}

	/* ??Map Buttons?? */
	#buttonContainer {
		float: left;
	}

	#radar {
		margin: 10px 10px 10px 0;
		padding: 8px;
		border: none;
		border-top-right-radius: 2px;
		border-bottom-right-radius: 2px;
		border-top-left-radius: 0px;
		border-bottom-left-radius: 0px;
		font-size: 11px;
		color: #565656;
		box-shadow: 0px 1px 4px -1px rgba(0, 0, 0, 0.3);
	}

	#traffic {
		margin: 10px 0 10px 10px;
		padding: 8px;
		border: none;
		border-top-left-radius: 2px;
		border-bottom-left-radius: 2px;
		border-top-right-radius: 0px;
		border-bottom-right-radius: 0px;
		font-size: 11px;
		color: #565656;
		box-shadow: 0px 1px 4px -1px rgba(0, 0, 0, 0.3);
		border-right: 1px solid #eaeaea;
	}

	.buttonClicked {
		color: #000!important;
		font-weight: 500;
	}


	/* ??Weather Box?? */
	.weatherBox {
		width: 275px;
		background-color: white;
	}

	.weatherBox table{
		display: table;
		text-align: center;
	}

	.weatherInfoContainer {
		padding: 1%;
	}

	.weatherBoxTitle {
		border-bottom: 3px solid #F99E28;
	}

	.weatherBoxTitleSpace {
		padding-left: 25%;
	}

	.prominentWeather {
		font-size: 5em;
	}

	.bottom {
		border-top: 2px solid gray;
	}

	.detailWeather {
		text-align: left;
	}

	.alert {
		text-align: left;
	}

/* ==Media== */

@media screen and (max-width: 480px) {
	body {
		background: url('../images/backgrounds/background-small.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

@media screen and (min-width: 481px) and (max-width: 640px) {
	body {
		background: url('../images/backgrounds/background-smaller.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

@media screen and (min-width: 641px) and (max-width: 1024px) {
	body {
		background: url('../images/backgrounds/background-medium.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

@media screen and (min-width: 1025px) and (max-width: 1280px) {
	body {
		background: url('../images/backgrounds/background-large.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

@media screen and (min-width: 1281px) and (max-width: 1920px) {
	body {
		background: url('../images/backgrounds/background-larger.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

@media screen and (min-width: 1921px) {
	body {
		background: url('../images/backgrounds/background.jpg') no-repeat center center fixed;
		background-size: cover;
		background-color: #09132e;
	}
}

